# tt-favorite-cuisine

./: .pre-commit-config.yaml  README.md  alembic.ini  justfile  pyproject.toml  task-tracker.md
.docker/local/: app.Dockerfile  docker-compose.yml  docker.compose.variables.env
.docker/test/: app.Dockerfile  docker-compose.yml  docker.compose.variables.env  migrate-postgres.Dockerfile
.github/workflows/: main.yml
alembic_migrations/: env.py
app/: main.py
app/integrations/postgresql/: models.py
app/meta/: app_manager.py  settings.py
app/meta/utils/di/: app_container_factory.py
app/meta/utils/di/factories/: fastapi_factory.py
app/meta/utils/di/providers/: fastapi_service_provider.py  settings_provider.py  uvicorn_server_provider.py
app/transports/fastapi/: foo.py
tests/: test_foo.py
