[project]
name = "tt-favorite-cuisine"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dishka>=1.7.2",
    "fastapi>=0.122.0",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
linters = [
    "bandit>=1.9.2",
    "mypy>=1.18.2",
    "ruff>=0.14.6",
    "safety>=3.7.0",
]
